--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,146 @@
+absl-py==0.11.0
+adal==1.2.5
+astor==0.8.0
+astroid==2.4.2
+astunparse==1.6.3
+blis==0.4.1
+boto==2.49.0
+boto3==1.10.6
+botocore==1.13.6
+cachetools==4.1.1
 certifi==2020.12.5
+cffi==1.14.4
+chainer==6.5.0
 chardet==4.0.0
 ci-info==0.2.0
 click==7.1.2
+colorama==0.4.1
+ConfigArgParse==0.15.1
 configobj==5.0.6
 configparser==5.0.2
+cryptography==3.2.1
+cycler==0.10.0
+cymem==2.0.2
 decorator==4.4.2
+Django==2.1.4
+dlib==19.18.0
+docutils==0.15.2
 elasticsearch==7.12.1
+en-core-web-sm==2.2.0
 etelemetry==0.2.2
+ffprobe==0.5
 filelock==3.0.12
 fitz==0.0.1.dev2
 Flask==1.1.2
 Flask-Cors==3.0.10
 future==0.18.2
+gast==0.3.3
+gensim==3.8.1
+google-auth==1.23.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grammarbot==0.2.0
+grpcio==1.34.0
+h5py==2.10.0
 httplib2==0.19.1
 idna==2.10
+imageio==2.6.1
+imageio-ffmpeg==0.3.0
+importlib-metadata==3.1.1
 isodate==0.6.0
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jmespath==0.9.4
+joblib==0.17.0
+Keras==2.4.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+linereader==1.0.0
 lxml==4.6.3
+Markdown==3.3.3
 MarkupSafe==1.1.1
+matplotlib==3.3.3
+mccabe==0.6.1
+moviepy==1.0.1
+msal==1.6.0
+murmurhash==1.0.2
 networkx==2.5.1
 nibabel==3.2.1
 nipype==1.6.0
+nltk==3.5
 numpy==1.20.2
+oauthlib==3.1.0
+Office365-REST-Python-Client==2.2.2
+opencv-python==4.1.1.26
+opt-einsum==3.3.0
 packaging==20.9
 pandas==1.2.4
 pathlib==1.0.1
 PDFNetPython3==9.0.0
 Pillow==8.2.0
+plac==0.9.6
+plotly==4.2.1
+preshed==3.0.2
+proglog==0.1.9
+protobuf==3.14.0
 prov==2.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pydot==1.4.2
+pydub==0.23.1
+PyJWT==1.7.1
+pyLanguagetool==0.8.3
+pylint==2.6.0
 PyMuPDF==1.18.12
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-pptx==0.6.18
+pytorch-ignite==0.2.1
 pytz==2021.1
 pyxnat==1.4
+PyYAML==5.3.1
 rdflib==5.0.0
+regex==2020.11.13
 requests==2.25.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+s3transfer==0.2.1
+scikit-learn==0.23.2
 scipy==1.6.3
 simplejson==3.17.2
 six==1.15.0
+sklearn==0.0
+smart-open==1.8.4
+spacy==2.2.1
+SpeechRecognition==3.8.1
+srsly==0.2.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorboardX==1.9
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+tensorflow-hub==0.7.0
+termcolor==1.1.0
+thinc==7.1.1
+threadpoolctl==2.1.0
+toml==0.10.2
+torch==1.3.0.post2
+torchtext==0.2.3
+tqdm==4.54.1
 traits==6.2.0
+typed-ast==1.4.1
+typing==3.6.6
+typing-extensions==3.6.6
 urllib3==1.26.4
+wasabi==0.3.0
 Werkzeug==1.0.1
+wrapt==1.12.1
 xlrd==1.2.0
 XlsxWriter==1.3.9
+zipp==3.4.0
